# fm

./: .gitignore  Cargo.toml  README.md  new.json  test.json  todo.md
fm_synth/: Cargo.toml
fm_synth/src/: main.rs  midi.rs  server.rs  synth.rs
fm_synth/src/synth/: adsr.rs  dsp_node.rs  mixer.rs  mod.rs  port.rs  serialized.rs  sinosc.rs  voice.rs
node_editor/: compiler.pde  link.pde  node.pde  node_editor.pde  notification_queue.pde  port.pde  simple.json  test3.json  util.pde
node_editor/data/: simple.json  test.json  test2.json  test3.json  test4.json
node_editor_2/: README.md  pom.xml
node_editor_2/local-maven-repo/org/processing/core/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
node_editor_2/local-maven-repo/org/processing/core/3.5.4/: core-3.5.4.jar.md5  core-3.5.4.jar.sha1  core-3.5.4.pom  core-3.5.4.pom.md5  core-3.5.4.pom.sha1
node_editor_2/src/: link.kt  main.kt  node.kt  port.kt  util.kt
node_editor_2/src/main/kotlin/: link.kt  main.kt  node.kt  notifications.kt  port.kt  util.kt
node_editor_2/src/main/kotlin/editor/: WebsocketConnection.kt  link.kt  main.kt  node.kt  notifications.kt  port.kt  util.kt
node_editor_2/src/main/kotlin/serde/: deserialization.kt  serialization.kt  structure.kt
node_editor_2/src/main/kotlin/serialization/: serialization.kt  structure.kt
src/: main.rs  synth.rs
