[package]
name = "fm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.7"
tungstenite = "0.15"
crossbeam-channel = "0.5"
